
cmake_minimum_required(VERSION 3.10)
project(plot)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_STANDARD  17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(MSVC)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /WX")
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror -Werror=cast-qual -Werror=conversion -Wpedantic -pedantic-errors")
endif()
add_executable(plot draw.cpp fir.cpp main.cpp)
target_link_libraries(plot sfml-graphics sfml-window sfml-system sfml-network sfml-audio) 
